fixed menu button div being too wide causing vertical scrollbar and display bug with menu buttons

--- a/style.css
+++ b/style.css
@@ -190,7 +190,6 @@ h1 {
     transform: translateX(-50%);
     display: flex;
     justify-content: space-around;
-    min-width: 100dvw;
     gap: 16px;
 }
 
